# gcode_wrangler

./: .gitignore  Cargo.toml  README.md  notes.md  pyproject.toml
client/: example.py  pyproject.toml  turtle_wrapper.py
client/drawbot_client/: __init__.py  client.py  l_system.py  turtle_wrapper.py
gcode_wrangler/: Cargo.toml  machine_settings.toml
gcode_wrangler/src/: generic.rs  grbl.rs  lib.rs  main.rs  marlin.rs  models.rs  shell.rs
python/drawbot_control/: l_system.py  turtle_wrapper.py
server/: config.toml  deploy.sh  pcconfig.py  pyproject.toml  readme.md
server/drawbot_server/: client.py  config.py  main.py  models.py  sse_channels.py
server/server/: server.py
server/static/: styles.css
server/templates/: index.html  job_list.html  machine.html  primary_job.html  progress.html
src/: generic.rs  grbl.rs  lib.rs  main.rs  marlin.rs
